# python-test

./: pyproject.toml
.github/worflows/: python.yml
.github/workflows/: python.yml  python_test.yml
.github/workflows/common/: actions.yml  prepare_python.yml
cli/: mycli.py
src/: myfunc.py
src/tests/: test_myfunc.py
